--- a/目录.md
+++ b/目录.md
@@ -1,1 +1,18 @@
-## wechat
+## 说明
+目前只考虑CMOS器件的物理结构
+
+#### 目录
+MOS型晶体管模型
+1. MOS管
+   a. MOS电容
+   b. 阈值电压
+2. 大信号工作原理
+   a. 线性区
+   b. 强反型区
+   c. 弱反型区
+   d. 速度饱和区
+3. 小信号模型
+   a. 低频小信号
+   b. 高频小信号
+   c. 模拟评价指标
+   d. 器件模型概要
